build.gradle 파일 수정

--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,36 @@
-plugins {
-    id 'java'
+buildscript {
+    // build.gradle 에서 사용하는 전역변수를 설정
+    ext {
+        springBootVersion = '2.1.7.RELEASE'
+    }
+
+    // 각종 의존성(라이브러리)들을 어떤 원격저장소에서 받을지
+    repositories {
+        mavenCentral()
+        jcenter()  // 2022년 2월 1일부터 지원하지 않는다고함
+    }
+
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
+
+// 선언한 플러그인 의존성들을 적용할 것인지, 자바와 스프링부트를 사용하기 위한 필수 플러그인(4가지)
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'  // 스프링 부투의 의존성들을 관리해주는 플러그인
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
+// 개발에 필요한 의존성을 선언
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-}
-
-test {
-    useJUnitPlatform()
+    compile('org.springframework.boot:spring-boot-starter-web')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
