--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,6 @@ repositories {
 // 개발에 필요한 의존성을 선언
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
