--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,9 @@ repositories {
 // 개발에 필요한 의존성을 선언
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-mustache')
+    compile('org.projectlombok:lombok')
     compile('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
